--- a/client/public/html/aboutUsPage.html
+++ b/client/public/html/aboutUsPage.html
@@ -325,13 +325,13 @@
                 <img src="../assets/teamHeadshots/dileepHeadshot.jpeg">
                 <div>
                     <div class="box-top-name">Dileep Dhami</div>
-                    <div class="box-top-position">Position</div>
-                    <div class="box-top-school">This degree at <span class="school-span">University of Western Ontario</span></div>
+                    <div class="box-top-position">Project Founder</div>
+                    <div class="box-top-school">4th Year Management and Organizational Studies at <span class="school-span">University of Western Ontario</span></div>
                     <div class="box-top-links"><a target="_blank"><i class="fa-brands fa-linkedin"></i></a><a target="_blank"><i class="fa-solid fa-link"></i></a></div>
                 </div>
             </div>
             <div class="box-bot">
-                Lorem ipsum
+                My name is Dileep - I'm a fourth-year business management student at UWO. I have approximately 3 years of work experience in cybersecurity, and I'm looking forward to beginning my career at EY as a Cybersecurity Consultant this summer. In my free time, I enjoy weight training, playing basketball, and cooking.
             </div>
         </div>
         <div class="box">
@@ -355,7 +355,7 @@
                 <div>
                     <div class="box-top-name">Rishabh Jain</div>
                     <div class="box-top-position">Full Stack Web Development Team Lead</div>
-                    <div class="box-top-school">This degree at <span class="school-span">University of Western Ontario</span></div>
+                    <div class="box-top-school">Computer Science Master's student at<span class="school-span">University of Western Ontario</span></div>
                     <div class="box-top-links"><a href="https://www.linkedin.com/in/1RishabhJain" target="_blank"><i class="fa-brands fa-linkedin"></i></a><a href="https://github.com/1RishabhJain" target="_blank"><i class="fa-solid fa-link"></i></a></div>
                 </div>
             </div>
@@ -369,7 +369,7 @@
                 <div>
                     <div class="box-top-name">Sehaj Naangal</div>
                     <div class="box-top-position">Full Stack Web Developer</div>
-                    <div class="box-top-school">This degree at <span class="school-span">University of Western Ontario</span></div>
+                    <div class="box-top-school">4th year Software Engineering student at <span class="school-span">University of Western Ontario</span></div>
                     <div class="box-top-links"><a href="https://www.linkedin.com/in/sehajnaangal/" target="_blank"><i class="fa-brands fa-linkedin"></i></a><a href="https://sehajnaangal.vercel.app/" target="_blank"><i class="fa-solid fa-link"></i></a></div>
                 </div>
             </div>
@@ -382,8 +382,8 @@
                 <img src="../assets/teamHeadshots/willHeadshot.jpg">
                 <div>
                     <div class="box-top-name">William Jamieson</div>
-                    <div class="box-top-position">Frontend and Multi-use Python Developer</div>
-                    <div class="box-top-school">This degree at <span class="school-span">University of Western Ontario</span></div>
+                    <div class="box-top-position">Frontend and Multi-use Java/Python Developer</div>
+                    <div class="box-top-school">1st year Computer Science student at <span class="school-span">University of Western Ontario</span></div>
                     <div class="box-top-links"><a href="https://www.linkedin.com/in/william-jamieson-53b069264/" target="_blank"><i class="fa-brands fa-linkedin"></i></a><a href="https://github.com/WilliamJamiesonXYU" target="_blank"><i class="fa-solid fa-link"></i></a></div>
                 </div>
             </div>
@@ -397,7 +397,7 @@
                 <div>
                     <div class="box-top-name">Joshua Marroquin</div>
                     <div class="box-top-position">Frontend Developer</div>
-                    <div class="box-top-school">This degree at <span class="school-span">University of Western Ontario</span></div>
+                    <div class="box-top-school">First year Computer Science student at <span class="school-span">University of Western Ontario</span></div>
                     <div class="box-top-links"><a href="www.linkedin.com/in/joshua-marroquin-1728a42a0" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
                 </div>
             </div>
@@ -411,7 +411,7 @@
                 <div>
                     <div class="box-top-name">Kethy Hu</div>
                     <div class="box-top-position">Frontend Developer</div>
-                    <div class="box-top-school">This degree at <span class="school-span">University of Western Ontario</span></div>
+                    <div class="box-top-school">First year Computer Science student at <span class="school-span">University of Western Ontario</span></div>
                     <div class="box-top-links"><a href="https://www.linkedin.com/in/kethyhu/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
                 </div>
             </div>
