--- a/client/public/html/aboutUsPage.html
+++ b/client/public/html/aboutUsPage.html
@@ -374,7 +374,7 @@
                 </div>
             </div>
             <div class="box-bot">
-                Hello everyone! My name is Rishabh Jain, and I am currently pursuing my Masters in Computer Science, specializing in Cybersecurity and AI. When I'm not buried in code, you can find me hitting the gym or honing in on my Judo skills. I enjoy listening to music and recently started learning how to play the piano. In my downtime, I like experimenting with cooking and trying out new recipes.
+                Hi, I’m Sehaj, a fourth-year student at the University of Western Ontario diving deep into the field of software engineering. I have a passion for full-stack development and creating captivating user experiences. Some of my skills in the tech area include React, JavaScript, Node.js, SQL, CSS, and Swift. Apart from coding, I enjoy traveling, working hard on the tennis court, playing the piano, and working out.
             </div>
         </div>
         <div class="box">
@@ -410,7 +410,7 @@
                 <img src="../assets/teamHeadshots/kethyHeadshot.jpg">
                 <div>
                     <div class="box-top-name">Kethy Hu</div>
-                    <div class="box-top-position">Frontend Developer</div>
+                    <div class="box-top-position">Full Stack Web Developer</div>
                     <div class="box-top-school">First year Computer Science student at <span class="school-span">University of Western Ontario</span></div>
                     <div class="box-top-links"><a href="https://www.linkedin.com/in/kethyhu/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
                 </div>
