--- a/client/public/html/aboutUsPage.html
+++ b/client/public/html/aboutUsPage.html
@@ -327,7 +327,7 @@
                     <div class="box-top-name">Dileep Dhami</div>
                     <div class="box-top-position">Project Founder</div>
                     <div class="box-top-school">4th Year Management and Organizational Studies at <span class="school-span">University of Western Ontario</span></div>
-                    <div class="box-top-links"><a target="_blank"><i class="fa-brands fa-linkedin"></i></a><a target="_blank"><i class="fa-solid fa-link"></i></a></div>
+                    <div class="box-top-links"><a href="https://www.linkedin.com/in/dileep-dhami/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
                 </div>
             </div>
             <div class="box-bot">
