--- a/client/public/html/aboutUsPage.html
+++ b/client/public/html/aboutUsPage.html
@@ -398,7 +398,7 @@
                     <div class="box-top-name">Joshua Marroquin</div>
                     <div class="box-top-position">Frontend Developer</div>
                     <div class="box-top-school">First year Computer Science student at <span class="school-span">University of Western Ontario</span></div>
-                    <div class="box-top-links"><a href="www.linkedin.com/in/joshua-marroquin-1728a42a0" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
+                    <div class="box-top-links"><a href="https://www.linkedin.com/in/joshua-marroquin-1728a42a0" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
                 </div>
             </div>
             <div class="box-bot">
